--- a/view/index.html
+++ b/view/index.html
@@ -17,16 +17,16 @@
         <select v-model="debitAccount">
             <option disabled value="">请选择</option>
             <option v-for="account in accounts" :value="account.Id">
-                {{ account.Name }}
+            {{ account.Name }}
             </option>
         </select>
-        <select @change="changeEntry(2)" v-model="firstEntry">
+        <select v-model="firstEntry">
             <option disabled value="">请选择</option>
             <option v-for="entry in firstEntries" :value="entry.Id">
-                {{ entry.Name }}
+            {{ entry.Name }}
             </option>
         </select>
-        <select @change="changeEntry(3)" v-model="secondEntry">
+        <select v-model="secondEntry">
             <option disabled value="">请选择</option>
             <option v-for="entry in secondEntries" :value="entry.Id">
             {{ entry.Name }}
@@ -44,13 +44,13 @@
         <select v-model="creditAccount">
             <option disabled value="">请选择</option>
             <option v-for="account in accounts" :value="account.Id">
-                {{ account.Name }}
+            {{ account.Name }}
             </option>
         </select>
         <select v-model="creditEntry">
             <option disabled value="">请选择</option>
             <option v-for="entry in entries" :value="entry.Id">
-                {{ entry.Name }}
+            {{ entry.Name }}
             </option>
         </select>
         <h2>金额</h2>
@@ -64,6 +64,6 @@
         <input type="submit" value="提交"/>
     </form>
 </div>
-<script src="/static/js/main.js?x=12sfsssd3"></script>
+<script src="/static/js/main.js?x=1a2sfsssssd3"></script>
 </body>
 </html>
