增加账户和科目的联动。

--- a/view/index.html
+++ b/view/index.html
@@ -64,6 +64,6 @@
         <input type="submit" value="提交"/>
     </form>
 </div>
-<script src="/static/js/main.js?x=1a2sfsssssd3"></script>
+<script src="/static/js/main.js?x=544"></script>
 </body>
 </html>
